force-app/main/default/objects/Long_Term_Memory_Run_Log__c/Long_Term_Memory_Run_Log__c.object-meta.xml
<CustomObject>
    <description>Run log for autonomous long-term memory generation workflow. Stores watermark windows, status, and operational metrics for each daily execution.</description>
    <label>Long Term Memory Run Log</label>
    <nameField>
        <label>Run Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Long Term Memory Run Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>