force-app/main/default/objects/Long_Term_Memory_Run_Log__c/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <label>Error Code</label>
    <description>Short machine-readable error code for failed or partial runs.</description>
    <type>Text</type>
    <length>100</length>
</CustomField>