force-app/main/default/objects/Long_Term_Memory_Run_Log__c/fields/Error_Summary__c.field-meta.xml
<CustomField>
    <fullName>Error_Summary__c</fullName>
    <label>Error Summary</label>
    <description>Human-readable error details when run status is failed or partial_success.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>