force-app/main/default/objects/Long_Term_Memory_Run_Log__c/fields/Memory_Items_Updated__c.field-meta.xml
<CustomField>
    <fullName>Memory_Items_Updated__c</fullName>
    <label>Memory Items Updated</label>
    <description>Number of memory items updated in this run.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>