force-app/main/default/objects/Long_Term_Memory_Run_Log__c/fields/Messages_Scanned__c.field-meta.xml
<CustomField>
    <fullName>Messages_Scanned__c</fullName>
    <label>Messages Scanned</label>
    <description>Total interaction messages scanned during the run.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>