force-app/main/default/objects/Long_Term_Memory_Run_Log__c/fields/Run_Finished_At_Utc__c.field-meta.xml
<CustomField>
    <fullName>Run_Finished_At_Utc__c</fullName>
    <label>Run Finished At Utc</label>
    <description>Timestamp when the workflow run completed or failed.</description>
    <type>DateTime</type>
</CustomField>