force-app/main/default/objects/Long_Term_Memory_Run_Log__c/fields/Run_Id__c.field-meta.xml
<CustomField>
    <fullName>Run_Id__c</fullName>
    <label>Run Id Value</label>
    <description>Stable UUID for external correlation across logs and workflow events.</description>
    <type>Text</type>
    <length>100</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>