force-app/main/default/objects/Long_Term_Memory_Run_Log__c/fields/Run_Started_At_Utc__c.field-meta.xml
<CustomField>
    <fullName>Run_Started_At_Utc__c</fullName>
    <label>Run Started At Utc</label>
    <description>Timestamp when the workflow run started.</description>
    <type>DateTime</type>
</CustomField>