force-app/main/default/objects/Long_Term_Memory_Run_Log__c/fields/Sessions_Discovered__c.field-meta.xml
<CustomField>
    <fullName>Sessions_Discovered__c</fullName>
    <label>Sessions Discovered</label>
    <description>Total sessions discovered in the extraction window.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>