force-app/main/default/objects/Long_Term_Memory_Run_Log__c/fields/Sessions_Processed_Failed__c.field-meta.xml
<CustomField>
    <fullName>Sessions_Processed_Failed__c</fullName>
    <label>Sessions Processed Failed</label>
    <description>Count of sessions that failed processing.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>