force-app/main/default/objects/Long_Term_Memory_Run_Log__c/fields/Sessions_Processed_Success__c.field-meta.xml
<CustomField>
    <fullName>Sessions_Processed_Success__c</fullName>
    <label>Sessions Processed Success</label>
    <description>Count of sessions processed successfully.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>