force-app/main/default/objects/Long_Term_Memory_Run_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <description>Execution status of the daily long-term memory generation run.</description>
    <inlineHelpText>Use success when the run completes end-to-end and watermark can advance.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>success</fullName>
                <default>true</default>
                <label>success</label>
            </value>
            <value>
                <fullName>partial_success</fullName>
            </value>
            <value>
                <fullName>failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>