force-app/main/default/objects/Long_Term_Memory_Run_Log__c/fields/Watermark_From_Utc__c.field-meta.xml
<CustomField>
    <fullName>Watermark_From_Utc__c</fullName>
    <label>Watermark From Utc</label>
    <description>Exclusive lower bound timestamp for records included in the run.</description>
    <inlineHelpText>Messages with timestamp greater than this value are included.</inlineHelpText>
    <type>DateTime</type>
</CustomField>