force-app/main/default/objects/Long_Term_Memory_Run_Log__c/fields/Watermark_To_Utc__c.field-meta.xml
<CustomField>
    <fullName>Watermark_To_Utc__c</fullName>
    <label>Watermark To Utc</label>
    <description>Inclusive upper bound timestamp for records included in the run.</description>
    <inlineHelpText>Messages with timestamp less than or equal to this value are included.</inlineHelpText>
    <type>DateTime</type>
</CustomField>